set overflow-x: hidden on page-body to prevent scrollbars on animation

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -98,6 +98,7 @@ footer {
     padding-right: 0px;
     padding-top: 25px;
     padding-bottom: 25px;
+    overflow-x: hidden;
 }
 
 .contact-form {
